--- a/employeesCRUD/src/main/resources/templates/employee-form.html
+++ b/employeesCRUD/src/main/resources/templates/employee-form.html
@@ -19,8 +19,27 @@
             <input type="text" class="form-control" id="occupation" th:field="*{occupation}">
             <div th:if="${#fields.hasErrors('occupation')}" th:errors="*{occupation}" style="color:red;"></div>
         </div>
+        <div class="mb-3">
+            <label for="occupation" class="form-label">Email:</label>
+            <input type="text" class="form-control" id="email" th:field="*{email}">
+            <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color:red;"></div>
+        </div>
+        <div class="mb-3">
+            <label for="occupation" class="form-label">Phone:</label>
+            <input type="text" class="form-control" id="phone" th:field="*{phone}">
+            <div th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" style="color:red;"></div>
+        </div>
+        <div class="mb-3">
+            <label for="occupation" class="form-label">Age:</label>
+            <input type="text" class="form-control" id="age" th:field="*{age}">
+            <div th:if="${#fields.hasErrors('age')}" th:errors="*{age}" style="color:red;"></div>
+        </div>
         <input type="submit" class="btn btn-primary" value="Save" />
+
     </form>
+    <div class="mb-3">
+        <a th:href="@{/employees}" method="get" class="btn btn-primary btn-sm">Cancel</a>
+    </div>
 </div>
 </body>
 </html>
